# COOL-compiler

./: .gitignore  Makefile  README.md  result.ll
Optimization/: CMakeLists.txt  Makefile  README.md  RegisterPasses.cpp  UnitCSE.cpp  UnitCSE.h  UnitLICM.cpp  UnitLICM.h  UnitLoopInfo.cpp  UnitLoopInfo.h  UnitSCCP.cpp  UnitSCCP.h  benchmark_.csv  benchmark_cse.csv  benchmark_licm.csv  benchmark_results.csv  benchmark_sccp.csv  end2end.py  result  result.ll  test_benchmark.py
Optimization/tests/: cse.ll  hoist.c  hoist.ll  sccp.c  sccp.ll  sccp_collapse.ll  sccp_nested_branches.ll  sccp_simple.c  sccp_simple.ll
Optimization/tests/correctness/: cse-cse.ll  cse-demo-cse.ll  cse-demo-licm.ll  cse-demo-nooptimize.ll  cse-demo-sccp.ll  cse-demo.c  cse-licm.ll  cse-nooptimize.ll  cse-sccp.ll  cse.c  cse_array-cse.ll  cse_array-licm.ll  cse_array-nooptimize.ll  cse_array-sccp.ll  cse_array.c  cse_control_flow-cse.ll  cse_control_flow-licm.ll  cse_control_flow-nooptimize.ll  cse_control_flow-sccp.ll  cse_control_flow.c  cse_function-cse.ll  cse_function-licm.ll  cse_function-nooptimize.ll  cse_function.c  cse_loop-cse.ll  cse_loop-nooptimize.ll  cse_loop-sccp.ll  cse_loop.c  cse_loop.ll  cse_multiple-cse.ll  cse_multiple-licm.ll  cse_multiple-nooptimize.ll  cse_multiple-sccp.ll  cse_multiple.c  cse_multiple.ll  cse_nested-cse.ll  cse_nested-licm.ll  cse_nested-nooptimize.ll  cse_nested-sccp.ll  cse_nested.c  (+97 more)
Optimization/tests/testing/: LA_test.c  LA_test.ll  PR491-cse.ll  PR491-licm.ll  PR491-sccp.ll  almabench-cse.ll  almabench-licm.ll  almabench-sccp.ll  assign1o-optimizeall.ll  doloop-cse.ll  doloop-licm.ll  doloop-sccp.ll  fannkuch-cse.ll  fannkuch-licm.ll  fannkuch-sccp.ll  ffbench-cse.ll  ffbench-licm.ll  ffbench-sccp.ll  huffbench-cse.ll  huffbench-licm.ll  huffbench-sccp.ll  lpbench-cse.ll  lpbench-licm.ll  lpbench-sccp.ll  matmul-licm.ll  matmul-sccp.ll  (+24 more)
(+144 files in other folders)
